Re-ordered names based on alphabetical order

--- a/Project_Proposal.tex
+++ b/Project_Proposal.tex
@@ -39,7 +39,7 @@
 
 % Title page info
 \title{AI-Based Precision Medicine Platform -- Proposal \\ \large Capstone: The Art of Approximation}
-\author{Ojas Chaturvedi, Zaheen Jamil, Saianshul Vishnubhaktula, Ritwik Jayaraman}
+\author{Ojas Chaturvedi, Ritwik Jayaraman, Saianshul Vishnubhaktula, Zaheen Jamil}
 \date{November 21, 2023}
 
 % ------------------------------------------------------------------------------
