--- a/model/main.ipynb
+++ b/model/main.ipynb
@@ -2,21 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import tensorflow as tf\n",
     "from keras.datasets import mnist\n",
-    "import matplotlib.pyplot as plt\n",
     "import cv2\n",
-    "import os"
+    "import math\n",
+    "from scipy import ndimage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +24,6 @@
     "        self.means = []\n",
     "        self.variances = []\n",
     "        self.priors = []\n",
-    "        self.posteriors = []\n",
     "\n",
     "    def fit(self, x, y):\n",
     "        self.classes = np.unique(y)\n",
@@ -34,15 +32,17 @@
     "            self.priors.append(np.mean(y == i))\n",
     "            x_n = x[y == i]\n",
     "            self.means.append(np.mean(x_n, axis = 0))\n",
-    "            self.variances.append(np.var(x_n, axis = 0) + 0.01559)\n",
+    "            self.variances.append(np.var(x_n, axis = 0) + 0.01575)\n",
     "\n",
     "    def predict(self, x):\n",
     "        self.posteriors = []\n",
+    "\n",
     "        for i in self.classes:\n",
     "            log_prior = np.log(self.priors[i])\n",
     "            likelihood = np.sum(np.log(self.gaussian(x, self.means[i], self.variances[i])), axis = 1)\n",
     "            posterior = likelihood + log_prior\n",
     "            self.posteriors.append(posterior)\n",
+    "            \n",
     "        self.posteriors = np.array(self.posteriors)\n",
     "        if self.posteriors.ndim == 2:\n",
     "            return np.argmax(self.posteriors, axis=0)\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,14 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.8155\n"
+      "Accuracy:  0.8156\n"
      ]
     }
    ],
@@ -89,87 +89,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ProcessImage:\n",
     "    def __init__(self, image_path):\n",
     "        self.path = image_path\n",
-    "    def read_and_preprocess(self):\n",
+    "\n",
+    "    def preprocess(self):\n",
     "        # Read the image\n",
     "        img = cv2.imread(self.path, cv2.IMREAD_GRAYSCALE)\n",
     "\n",
-    "        # Resize to 28x28\n",
-    "        img = cv2.resize(img, (28, 28), interpolation=cv2.INTER_LANCZOS4)\n",
+    "        # Scale to 20x20, invert (like training)\n",
+    "        img = cv2.resize(255 - img, (20, 20), interpolation = cv2.INTER_AREA)\n",
     "\n",
-    "        # Apply Gaussian Blur\n",
-    "        img = cv2.GaussianBlur(img, (5, 5), 0)\n",
+    "        # img = cv2.GaussianBlur(img,(5,5),0)\n",
     "\n",
-    "        # Apply Thresholding\n",
-    "        _, img = cv2.threshold(img, 0, 255, cv2.THRESH_BINARY_INV + cv2.THRESH_OTSU)\n",
+    "        # Make gray into black (uniform background like training)\n",
+    "        _, img = cv2.threshold(img, 100, 255, cv2.THRESH_BINARY + cv2.THRESH_OTSU)\n",
+    "\n",
+    "        # Remove completely black (empty) rows/cols on all sides\n",
+    "        img = self.trim(img)\n",
+    "\n",
+    "        # Center digit\n",
+    "        shiftx, shifty = self.getBestShift(img)\n",
+    "        shifted = self.shift(img,shiftx,shifty)\n",
+    "        img = shifted\n",
+    "\n",
+    "        # DEBUG\n",
+    "        cv2.imwrite(\"output.png\", img)\n",
     "\n",
     "        # Normalize the image\n",
     "        img = img / 255.0\n",
     "\n",
-    "        # Reshape to match the input of the model\n",
-    "        img = img.reshape(1, -1)\n",
+    "        # Reshape to 1D match the input of the model\n",
+    "        img = img.reshape(-1)\n",
     "\n",
-    "        return img"
+    "        return img\n",
+    "\n",
+    "    def trim(self, img):\n",
+    "        while np.sum(img[0]) == 0:\n",
+    "            img = img[1:]\n",
+    "\n",
+    "        while np.sum(img[:,0]) == 0:\n",
+    "            img = np.delete(img,0,1)\n",
+    "\n",
+    "        while np.sum(img[-1]) == 0:\n",
+    "            img = img[:-1]\n",
+    "\n",
+    "        while np.sum(img[:,-1]) == 0:\n",
+    "            img = np.delete(img,-1,1)\n",
+    "\n",
+    "        rows,cols = img.shape\n",
+    "\n",
+    "        if rows > cols:\n",
+    "            factor = 20.0 / rows\n",
+    "            rows = 20\n",
+    "            cols = int(round(cols * factor))\n",
+    "            img = cv2.resize(img, (cols, rows))\n",
+    "        else:\n",
+    "            factor = 20.0 / cols\n",
+    "            cols = 20\n",
+    "            rows = int(round(rows * factor))\n",
+    "            img = cv2.resize(img, (cols, rows))\n",
+    "\n",
+    "        colsPadding = (int(math.ceil((28 - cols)/ 2.0)), int(math.floor((28 - cols)/ 2.0)))\n",
+    "        rowsPadding = (int(math.ceil((28 - rows)/ 2.0)), int(math.floor((28 - rows)/ 2.0)))\n",
+    "        img = np.pad(img, (rowsPadding, colsPadding), 'constant')\n",
+    "\n",
+    "        return img\n",
+    "\n",
+    "    def getBestShift(self, img):\n",
+    "        cy, cx = ndimage.center_of_mass(img)\n",
+    "\n",
+    "        rows,cols = img.shape\n",
+    "        shiftx = np.round(cols/2.0-cx).astype(int)\n",
+    "        shifty = np.round(rows/2.0-cy).astype(int)\n",
+    "\n",
+    "        return shiftx, shifty\n",
+    "\n",
+    "    def shift(self, img,sx,sy):\n",
+    "        rows,cols = img.shape\n",
+    "        M = np.float32([[1,0,sx],[0,1,sy]])\n",
+    "        shifted = cv2.warpAffine(img,M,(cols,rows))\n",
+    "\n",
+    "        return shifted"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1. 1. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 0. 1. 1. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 1. 0. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 0. 0. 0. 0. 0. 0. 0. 1. 1. 1. 0. 0.\n",
-      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 1. 0. 0. 0. 0. 0. 0. 0. 1.\n",
-      "  1. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 1. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 1. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 1.\n",
-      "  0. 0. 0. 0. 0. 0. 0. 1. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      "  0. 1. 1. 1. 0. 0. 0. 0. 0. 1. 1. 1. 1. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 0. 0. 1. 1. 1. 1. 0. 0. 1. 1. 1. 1. 1. 1. 1. 1. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 0. 0.\n",
-      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 1. 1. 1. 1. 1. 0. 0. 0. 0.\n",
-      "  1. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 1. 1. 0. 0.\n",
-      "  0. 0. 0. 0. 1. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 1. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 1. 0.\n",
-      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      "  1. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 0. 1. 1. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 0. 0.\n",
-      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      "  1. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 0. 1. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n",
-      "Predicted Digit: [4]\n"
+      "Predicted Digit:  [7 7 0 5 3 2 1 0 3 7 4 2 9 1 3 1 9 1 7]\n",
+      "Actual Digits:  [7, 7, 0, 5, 3, 2, 1, 0, 8, 7, 4, 2, 9, 8, 5, 1, 1, 1, 7]\n",
+      "Accuracy:  0.7894736842105263\n"
      ]
     }
    ],
    "source": [
-    "image_processor = ProcessImage('random.png')\n",
-    "processed_image = image_processor.read_and_preprocess()\n",
-    "print(processed_image)\n",
-    "predicted_digit = model.predict(processed_image)\n",
-    "print(\"Predicted Digit:\", predicted_digit)"
+    "def digits():\n",
+    "    digits_imgs = []\n",
+    "    suffixes = [\"1\", \"10\", \"11\", \"12\", \"13\", \"14\", \"15\", \"16\", \"17\", \"18\", \"19\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\"]\n",
+    "    for num in suffixes:\n",
+    "        img_processor = ProcessImage('digits/digit' + (num) + '.png')\n",
+    "        img = img_processor.preprocess()\n",
+    "        digits_imgs.append(img)\n",
+    "\n",
+    "    predicted_digits = model.predict(digits_imgs)\n",
+    "    print(\"Predicted Digit: \", predicted_digits)\n",
+    "\n",
+    "    actual_digits = [7, 7, 0, 5, 3, 2, 1, 0, 8, 7, 4, 2, 9, 8, 5, 1, 1, 1, 7]\n",
+    "    print(\"Actual Digits: \", actual_digits)\n",
+    "\n",
+    "    accuracy = np.mean(predicted_digits == actual_digits)\n",
+    "    print(\"Accuracy: \", accuracy)\n",
+    "\n",
+    "digits()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted Digit:  [1 6 3 9 9 6 7 8 9 1 2 4 3 9 2]\n",
+      "Actual Digits:  [1, 2, 3, 4, 5, 6, 7, 8, 9, 1, 2, 4, 8, 9, 1]\n",
+      "Accuracy:  0.6666666666666666\n"
+     ]
+    }
+   ],
+   "source": [
+    "def r_digits():\n",
+    "    digits_imgs = []\n",
+    "    suffixes = [\"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\", \"11\", \"22\", \"44\", \"88\", \"99\", \"111\"]\n",
+    "    for num in suffixes:\n",
+    "        img_processor = ProcessImage('r_digits/r_image_' + (num) + '.png')\n",
+    "        img = img_processor.preprocess()\n",
+    "        digits_imgs.append(img)\n",
+    "\n",
+    "    predicted_digits = model.predict(digits_imgs)\n",
+    "    print(\"Predicted Digit: \", predicted_digits)\n",
+    "\n",
+    "    actual_digits = [1, 2, 3, 4, 5, 6, 7, 8, 9, 1, 2, 4, 8, 9, 1]\n",
+    "    print(\"Actual Digits: \", actual_digits)\n",
+    "\n",
+    "    accuracy = np.mean(predicted_digits == actual_digits)\n",
+    "    print(\"Accuracy: \", accuracy)\n",
+    "\n",
+    "r_digits()"
    ]
   }
  ],
@@ -189,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
