Clean up main.ipynb

--- a/model/main.ipynb
+++ b/model/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,11 +114,11 @@
     "\n",
     "        # Center digit\n",
     "        shiftx, shifty = self.getBestShift(img)\n",
-    "        shifted = self.shift(img,shiftx,shifty)\n",
+    "        shifted = self.shift(img, shiftx, shifty)\n",
     "        img = shifted\n",
     "\n",
     "        # DEBUG\n",
-    "        cv2.imwrite(\"output.png\", img)\n",
+    "        # cv2.imwrite(\"output.png\", img)\n",
     "\n",
     "        # Normalize the image\n",
     "        img = img / 255.0\n",
@@ -133,15 +133,15 @@
     "            img = img[1:]\n",
     "\n",
     "        while np.sum(img[:,0]) == 0:\n",
-    "            img = np.delete(img,0,1)\n",
+    "            img = np.delete(img, 0, 1)\n",
     "\n",
     "        while np.sum(img[-1]) == 0:\n",
     "            img = img[:-1]\n",
     "\n",
     "        while np.sum(img[:,-1]) == 0:\n",
-    "            img = np.delete(img,-1,1)\n",
+    "            img = np.delete(img, -1, 1)\n",
     "\n",
-    "        rows,cols = img.shape\n",
+    "        rows, cols = img.shape\n",
     "\n",
     "        if rows > cols:\n",
     "            factor = 20.0 / rows\n",
@@ -154,8 +154,8 @@
     "            rows = int(round(rows * factor))\n",
     "            img = cv2.resize(img, (cols, rows))\n",
     "\n",
-    "        colsPadding = (int(math.ceil((28 - cols)/ 2.0)), int(math.floor((28 - cols)/ 2.0)))\n",
-    "        rowsPadding = (int(math.ceil((28 - rows)/ 2.0)), int(math.floor((28 - rows)/ 2.0)))\n",
+    "        colsPadding = (int(math.ceil((28 - cols) / 2.0)), int(math.floor((28 - cols) / 2.0)))\n",
+    "        rowsPadding = (int(math.ceil((28 - rows)/ 2.0)), int(math.floor((28 - rows) / 2.0)))\n",
     "        img = np.pad(img, (rowsPadding, colsPadding), 'constant')\n",
     "\n",
     "        return img\n",
@@ -163,23 +163,23 @@
     "    def getBestShift(self, img):\n",
     "        cy, cx = ndimage.center_of_mass(img)\n",
     "\n",
-    "        rows,cols = img.shape\n",
-    "        shiftx = np.round(cols/2.0-cx).astype(int)\n",
-    "        shifty = np.round(rows/2.0-cy).astype(int)\n",
+    "        rows, cols = img.shape\n",
+    "        shiftx = np.round(cols / 2.0 - cx).astype(int)\n",
+    "        shifty = np.round(rows/ 2.0 - cy).astype(int)\n",
     "\n",
     "        return shiftx, shifty\n",
     "\n",
-    "    def shift(self, img,sx,sy):\n",
+    "    def shift(self, img, sx, sy):\n",
     "        rows,cols = img.shape\n",
-    "        M = np.float32([[1,0,sx],[0,1,sy]])\n",
-    "        shifted = cv2.warpAffine(img,M,(cols,rows))\n",
+    "        M = np.float32([[1, 0, sx], [0, 1, sy]])\n",
+    "        shifted = cv2.warpAffine(img, M, (cols, rows))\n",
     "\n",
     "        return shifted"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -196,6 +196,7 @@
     "def digits():\n",
     "    digits_imgs = []\n",
     "    suffixes = [\"1\", \"10\", \"11\", \"12\", \"13\", \"14\", \"15\", \"16\", \"17\", \"18\", \"19\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\"]\n",
+    "    \n",
     "    for num in suffixes:\n",
     "        img_processor = ProcessImage('digits/digit' + (num) + '.png')\n",
     "        img = img_processor.preprocess()\n",
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -232,6 +233,7 @@
     "def r_digits():\n",
     "    digits_imgs = []\n",
     "    suffixes = [\"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\", \"11\", \"22\", \"44\", \"88\", \"99\", \"111\"]\n",
+    "    \n",
     "    for num in suffixes:\n",
     "        img_processor = ProcessImage('r_digits/r_image_' + (num) + '.png')\n",
     "        img = img_processor.preprocess()\n",
