--- a/model/main.ipynb
+++ b/model/main.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\vishn\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from keras.datasets import mnist\n",
@@ -15,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,24 +39,24 @@
     "\n",
     "        for i in self.classes:\n",
     "            self.priors.append(np.mean(y == i))\n",
-    "            x_n = x[y == i]\n",
-    "            self.means.append(np.mean(x_n, axis = 0))\n",
-    "            self.variances.append(np.var(x_n, axis = 0) + 0.01575)\n",
+    "            x_i = x[y == i]\n",
+    "            self.means.append(np.mean(x_i, axis = 0))\n",
+    "            self.variances.append(np.var(x_i, axis = 0) + 0.01575)\n",
     "\n",
     "    def predict(self, x):\n",
-    "        self.posteriors = []\n",
+    "        posteriors = []\n",
     "\n",
     "        for i in self.classes:\n",
     "            log_prior = np.log(self.priors[i])\n",
     "            likelihood = np.sum(np.log(self.gaussian(x, self.means[i], self.variances[i])), axis = 1)\n",
     "            posterior = likelihood + log_prior\n",
-    "            self.posteriors.append(posterior)\n",
+    "            posteriors.append(posterior)\n",
     "            \n",
-    "        self.posteriors = np.array(self.posteriors)\n",
-    "        if self.posteriors.ndim == 2:\n",
-    "            return np.argmax(self.posteriors, axis=0)\n",
+    "        posteriors = np.array(posteriors)\n",
+    "        if posteriors.ndim == 2:\n",
+    "            return np.argmax(posteriors, axis = 0)\n",
     "        else:\n",
-    "            return np.argmax(self.posteriors)\n",
+    "            return np.argmax(posteriors)\n",
     "\n",
     "    def gaussian(self, x, mean, variance):\n",
     "        numerator = np.exp(-((x - mean) ** 2) / (2 * variance))\n",
@@ -57,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -94,12 +103,12 @@
    "outputs": [],
    "source": [
     "class ProcessImage:\n",
-    "    def __init__(self, image_path):\n",
-    "        self.path = image_path\n",
+    "    def __init__(self, image):\n",
+    "        self.image = image\n",
     "\n",
     "    def preprocess(self):\n",
     "        # Read the image\n",
-    "        img = cv2.imread(self.path, cv2.IMREAD_GRAYSCALE)\n",
+    "        img = self.image\n",
     "\n",
     "        # Scale to 20x20, invert (like training)\n",
     "        img = cv2.resize(255 - img, (20, 20), interpolation = cv2.INTER_AREA)\n",
@@ -107,7 +116,7 @@
     "        # img = cv2.GaussianBlur(img,(5,5),0)\n",
     "\n",
     "        # Make gray into black (uniform background like training)\n",
-    "        _, img = cv2.threshold(img, 100, 255, cv2.THRESH_BINARY + cv2.THRESH_OTSU)\n",
+    "        _, img = cv2.threshold(img, 128, 255, cv2.THRESH_BINARY + cv2.THRESH_OTSU)\n",
     "\n",
     "        # Remove completely black (empty) rows/cols on all sides\n",
     "        img = self.trim(img)\n",
