Fix a minor mistake with the preprocess function.

--- a/model/main.ipynb
+++ b/model/main.ipynb
@@ -103,13 +103,13 @@
    "outputs": [],
    "source": [
     "class ProcessImage:\n",
-    "    def __init__(self, image):\n",
-    "        self.image = image\n",
+    "    def __init__(self, image_path):\n",
+    "        self.path = image_path\n",
     "\n",
     "    def preprocess(self):\n",
     "        # Read the image\n",
-    "        img = self.image\n",
-    "\n",
+    "        img = cv2.imread(self.path, cv2.IMREAD_GRAYSCALE)\n",
+    "        \n",
     "        # Scale to 20x20, invert (like training)\n",
     "        img = cv2.resize(255 - img, (20, 20), interpolation = cv2.INTER_AREA)\n",
     "\n",
