Copy changes to model from digit_recognizer.py into main.ipynb and main.py.

--- a/model/main.ipynb
+++ b/model/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,24 +49,31 @@
     "        for i in self.classes:\n",
     "            log_prior = np.log(self.priors[i])\n",
     "            likelihood = np.sum(np.log(self.gaussian(x, self.means[i], self.variances[i])), axis = 1)\n",
-    "            posterior = likelihood + log_prior\n",
+    "            posterior = np.exp(likelihood) * np.exp(log_prior)\n",
     "            posteriors.append(posterior)\n",
-    "            \n",
-    "        posteriors = np.array(posteriors)\n",
-    "        if posteriors.ndim == 2:\n",
-    "            return np.argmax(posteriors, axis = 0)\n",
-    "        else:\n",
-    "            return np.argmax(posteriors)\n",
+    "\n",
+    "        # .tranpose() swaps rows and columns\n",
+    "        posteriors = np.array(posteriors).transpose()\n",
+    "\n",
+    "        # Since we can't directly get P(y | x) since we don't have P(x)\n",
+    "        # We use the fact that P(x)(P(1 | x) + P(2 | x) + ... + P(10 | x)) = 1\n",
+    "        # Thus we can solve for P(x) and use it as a scale factor to get the probability of P(y | x)\n",
+    "        for i in range(len(posteriors)):\n",
+    "            scale_factor = 1 / np.sum(posteriors[i])\n",
+    "            posteriors[i] *= scale_factor\n",
+    "        print(posteriors)\n",
+    "        return posteriors\n",
     "\n",
     "    def gaussian(self, x, mean, variance):\n",
     "        numerator = np.exp(-((x - mean) ** 2) / (2 * variance))\n",
     "        denominator = np.sqrt(2 * np.pi * variance)\n",
+    "        \n",
     "        return numerator / denominator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +98,7 @@
    "source": [
     "model = NaiveBayes()\n",
     "model.fit(x_train, y_train)\n",
-    "y_predicted = model.predict(x_test)\n",
+    "y_predicted = np.argmax(model.predict(x_test), axis = 1)\n",
     "accuracy = np.mean(y_predicted == y_test)\n",
     "print(\"Accuracy: \", accuracy)"
    ]
