Fix merge conflict.

--- a/model/main.ipynb
+++ b/model/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
     "        for i in range(len(posteriors)):\n",
     "            scale_factor = 1 / np.sum(posteriors[i])\n",
     "            posteriors[i] *= scale_factor\n",
-    "        print(posteriors)\n",
+    "\n",
     "        return posteriors\n",
     "\n",
     "    def gaussian(self, x, mean, variance):\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,13 +84,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[2.95411945e-161 5.19893749e-261 3.69761709e-162 ... 1.00000000e+000\n",
+      "  8.95881476e-106 1.31097334e-041]\n",
+      " [1.75746266e-113 3.10003746e-257 1.00000000e+000 ... 0.00000000e+000\n",
+      "  1.68632175e-114 3.34642769e-305]\n",
+      " [2.55429520e-209 1.00000000e+000 3.80165655e-131 ... 4.38744484e-131\n",
+      "  8.07274920e-120 4.95507526e-124]\n",
+      " ...\n",
+      " [3.53905652e-207 1.06563353e-244 7.13836534e-122 ... 2.82366528e-044\n",
+      "  1.33321773e-027 1.00000000e+000]\n",
+      " [1.44816640e-105 7.98163769e-171 9.54791102e-099 ... 4.67857876e-110\n",
+      "  1.00000000e+000 5.81576626e-092]\n",
+      " [1.13928198e-148 0.00000000e+000 6.06259231e-141 ... 0.00000000e+000\n",
+      "  7.25192383e-222 0.00000000e+000]]\n",
       "Accuracy:  0.8156\n"
      ]
     }
@@ -105,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,13 +207,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[8.42044210e-167 0.00000000e+000 1.42765746e-169 9.05882739e-143\n",
+      "  2.14122870e-111 1.07652274e-168 7.71056334e-260 1.00000000e+000\n",
+      "  6.43436705e-127 2.24726607e-107]\n",
+      " [3.72409627e-167 0.00000000e+000 1.87873468e-090 1.28198357e-075\n",
+      "  1.56512480e-043 1.70531158e-070 8.85588473e-130 1.00000000e+000\n",
+      "  1.40764176e-056 1.52182204e-021]\n",
+      " [1.00000000e+000 0.00000000e+000 2.29963505e-077 5.08676794e-057\n",
+      "  1.53469950e-013 2.71354991e-028 1.30909334e-061 2.29096769e-036\n",
+      "  6.82442211e-035 1.93527933e-011]\n",
+      " [9.98997319e-054 1.46921978e-142 7.83575554e-053 7.81475269e-059\n",
+      "  1.36150062e-110 1.00000000e+000 2.74032923e-060 4.31306605e-234\n",
+      "  3.65788631e-019 3.81343115e-205]\n",
+      " [5.72559689e-133 2.23047668e-067 1.99132086e-082 1.00000000e+000\n",
+      "  1.43747958e-070 4.02119188e-047 1.43168164e-190 1.05929369e-111\n",
+      "  4.10931678e-033 4.00471302e-093]\n",
+      " [6.13229426e-110 2.37955544e-177 1.00000000e+000 8.01914367e-080\n",
+      "  1.71158213e-110 2.59275345e-071 3.74745063e-033 2.74197112e-226\n",
+      "  1.34193367e-071 3.50948569e-157]\n",
+      " [2.94685799e-189 1.00000000e+000 2.24572218e-121 6.63743590e-125\n",
+      "  1.19165035e-116 2.07075705e-115 7.93650587e-122 1.35632837e-127\n",
+      "  1.35979022e-112 3.64496798e-119]\n",
+      " [1.00000000e+000 0.00000000e+000 1.39664635e-092 4.12493118e-096\n",
+      "  3.31897523e-104 9.92403962e-069 2.64542170e-109 5.42340486e-159\n",
+      "  8.53252025e-072 1.59208014e-143]\n",
+      " [8.95808460e-147 2.15813608e-151 2.07243971e-018 8.68137656e-001\n",
+      "  4.10631962e-045 7.49935036e-020 4.22597302e-060 2.87550497e-130\n",
+      "  1.31862344e-001 3.75732498e-074]\n",
+      " [3.80538477e-131 7.25904365e-028 4.09481556e-083 8.16678871e-060\n",
+      "  1.71807910e-052 2.96151294e-058 3.33103097e-104 1.00000000e+000\n",
+      "  2.84535373e-058 5.51488154e-021]\n",
+      " [3.08305431e-062 4.44125013e-259 9.14384618e-040 2.63221613e-062\n",
+      "  1.00000000e+000 1.58806199e-037 4.18321197e-011 1.55285323e-090\n",
+      "  5.08955540e-073 1.57948980e-045]\n",
+      " [1.72760617e-149 5.96755335e-250 1.00000000e+000 1.05789656e-115\n",
+      "  6.42677823e-218 7.37839070e-132 8.46089690e-082 0.00000000e+000\n",
+      "  8.24958010e-126 0.00000000e+000]\n",
+      " [3.23957868e-107 2.28629376e-154 8.04163348e-091 1.66042935e-056\n",
+      "  1.02367191e-023 1.68964860e-045 4.45474018e-077 2.66572841e-021\n",
+      "  9.06974959e-051 1.00000000e+000]\n",
+      " [7.90179494e-152 1.00000000e+000 8.11748083e-084 6.87489566e-060\n",
+      "  4.15663621e-049 2.13729294e-050 6.19278252e-104 1.80175804e-095\n",
+      "  4.40192232e-025 2.84387796e-046]\n",
+      " [1.66245825e-101 0.00000000e+000 1.71548479e-002 9.82845152e-001\n",
+      "  1.72973011e-159 2.07384796e-027 7.97174333e-032 0.00000000e+000\n",
+      "  4.45979155e-069 1.41736013e-236]\n",
+      " [7.43538048e-206 1.00000000e+000 6.36190822e-137 7.65165303e-124\n",
+      "  7.55863118e-123 7.43505182e-115 1.77550647e-141 4.28687862e-129\n",
+      "  2.93421262e-109 5.83253121e-111]\n",
+      " [2.82315247e-125 1.01544430e-123 1.25324157e-116 1.37257954e-056\n",
+      "  5.21525214e-028 2.09573424e-050 3.28195405e-119 4.32075441e-019\n",
+      "  2.75903271e-064 1.00000000e+000]\n",
+      " [1.20638264e-116 1.00000000e+000 4.09818402e-100 4.92390528e-043\n",
+      "  3.65338915e-050 7.16905817e-033 8.54455110e-073 1.81736620e-050\n",
+      "  3.81582274e-038 2.02068755e-025]\n",
+      " [8.66138077e-187 0.00000000e+000 2.71842742e-199 1.16837763e-153\n",
+      "  1.18950136e-117 9.89153569e-137 1.32268215e-248 1.00000000e+000\n",
+      "  4.27847408e-132 3.10711585e-055]]\n",
       "Predicted Digit:  [7 7 0 5 3 2 1 0 3 7 4 2 9 1 3 1 9 1 7]\n",
       "Actual Digits:  [7, 7, 0, 5, 3, 2, 1, 0, 8, 7, 4, 2, 9, 8, 5, 1, 1, 1, 7]\n",
       "Accuracy:  0.7894736842105263\n"
@@ -217,7 +287,7 @@
     "        img = img_processor.preprocess()\n",
     "        digits_imgs.append(img)\n",
     "\n",
-    "    predicted_digits = model.predict(digits_imgs)\n",
+    "    predicted_digits = np.argmax(model.predict(digits_imgs), axis = 1)\n",
     "    print(\"Predicted Digit: \", predicted_digits)\n",
     "\n",
     "    actual_digits = [7, 7, 0, 5, 3, 2, 1, 0, 8, 7, 4, 2, 9, 8, 5, 1, 1, 1, 7]\n",
@@ -254,7 +324,7 @@
     "        img = img_processor.preprocess()\n",
     "        digits_imgs.append(img)\n",
     "\n",
-    "    predicted_digits = model.predict(digits_imgs)\n",
+    "    predicted_digits = np.argmax(model.predict(digits_imgs), axis = 1)\n",
     "    print(\"Predicted Digit: \", predicted_digits)\n",
     "\n",
     "    actual_digits = [1, 2, 3, 4, 5, 6, 7, 8, 9, 1, 2, 4, 8, 9, 1]\n",
