Add in final touches.

--- a/model/main.ipynb
+++ b/model/main.ipynb
@@ -49,20 +49,10 @@
     "        for i in self.classes:\n",
     "            log_prior = np.log(self.priors[i])\n",
     "            likelihood = np.sum(np.log(self.gaussian(x, self.means[i], self.variances[i])), axis = 1)\n",
-    "            posterior = np.exp(likelihood) * np.exp(log_prior)\n",
+    "            posterior = likelihood + log_prior\n",
     "            posteriors.append(posterior)\n",
     "\n",
-    "        # .tranpose() swaps rows and columns\n",
-    "        posteriors = np.array(posteriors).transpose()\n",
-    "\n",
-    "        # Since we can't directly get P(y | x) since we don't have P(x)\n",
-    "        # We use the fact that P(x)(P(1 | x) + P(2 | x) + ... + P(10 | x)) = 1\n",
-    "        # Thus we can solve for P(x) and use it as a scale factor to get the probability of P(y | x)\n",
-    "        for i in range(len(posteriors)):\n",
-    "            scale_factor = 1 / np.sum(posteriors[i])\n",
-    "            posteriors[i] *= scale_factor\n",
-    "\n",
-    "        return posteriors\n",
+    "        return np.argmax(posteriors, axis = 0)\n",
     "\n",
     "    def gaussian(self, x, mean, variance):\n",
     "        numerator = np.exp(-((x - mean) ** 2) / (2 * variance))\n",
@@ -84,26 +74,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2.95411945e-161 5.19893749e-261 3.69761709e-162 ... 1.00000000e+000\n",
-      "  8.95881476e-106 1.31097334e-041]\n",
-      " [1.75746266e-113 3.10003746e-257 1.00000000e+000 ... 0.00000000e+000\n",
-      "  1.68632175e-114 3.34642769e-305]\n",
-      " [2.55429520e-209 1.00000000e+000 3.80165655e-131 ... 4.38744484e-131\n",
-      "  8.07274920e-120 4.95507526e-124]\n",
-      " ...\n",
-      " [3.53905652e-207 1.06563353e-244 7.13836534e-122 ... 2.82366528e-044\n",
-      "  1.33321773e-027 1.00000000e+000]\n",
-      " [1.44816640e-105 7.98163769e-171 9.54791102e-099 ... 4.67857876e-110\n",
-      "  1.00000000e+000 5.81576626e-092]\n",
-      " [1.13928198e-148 0.00000000e+000 6.06259231e-141 ... 0.00000000e+000\n",
-      "  7.25192383e-222 0.00000000e+000]]\n",
       "Accuracy:  0.8156\n"
      ]
     }
@@ -111,7 +88,7 @@
    "source": [
     "model = NaiveBayes()\n",
     "model.fit(x_train, y_train)\n",
-    "y_predicted = np.argmax(model.predict(x_test), axis = 1)\n",
+    "y_predicted = model.predict(x_test)\n",
     "accuracy = np.mean(y_predicted == y_test)\n",
     "print(\"Accuracy: \", accuracy)"
    ]
@@ -287,7 +264,7 @@
     "        img = img_processor.preprocess()\n",
     "        digits_imgs.append(img)\n",
     "\n",
-    "    predicted_digits = np.argmax(model.predict(digits_imgs), axis = 1)\n",
+    "    predicted_digits = model.predict(digits_imgs)\n",
     "    print(\"Predicted Digit: \", predicted_digits)\n",
     "\n",
     "    actual_digits = [7, 7, 0, 5, 3, 2, 1, 0, 8, 7, 4, 2, 9, 8, 5, 1, 1, 1, 7]\n",
